--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Arvo:wght@400;700&display=swap');
+
 body {
   margin: 0;
   padding: 20px;
@@ -7,7 +9,7 @@ body {
   height: 100vh;
   background-color: #fff;
   color: #5c5c5c;
-  font-family: 'Metropolis-regular', Arial, sans-serif;
+  font-family: 'Arvo', Arial, sans-serif;
   text-align: center;
   overflow: hidden;
   position: relative;
@@ -47,6 +49,7 @@ p {
 
 .email, .phone {
   font-weight: 600; /* SemiBold */
+  font-family: 'Metropolis-regular', Arial, sans-serif;
   color: #488BCE;
   text-shadow: 0 1px 2px rgba(0, 0, 0, 0.1); /* Add text shadow */
 }
