--- a/styles.css
+++ b/styles.css
@@ -47,10 +47,11 @@ p {
   text-shadow: 0 1px 2px rgba(0, 0, 0, 0.1); /* Add text shadow */
 }
 
-.email, .phone {
+.email a, .phone a {
   font-weight: 600; /* SemiBold */
   font-family: 'Metropolis-regular', Arial, sans-serif;
   color: #488BCE;
+  text-decoration: none; /* Remove underline */
   text-shadow: 0 1px 2px rgba(0, 0, 0, 0.1); /* Add text shadow */
 }
 
